Prevent map image from stretching

--- a/src/app/map-dialog/map-dialog.component.scss
+++ b/src/app/map-dialog/map-dialog.component.scss
@@ -3,15 +3,17 @@
     flex-direction: column;
     align-items: center;
     height: 100%;
-    width: 100%;
 
     .content {
+        display: flex;
         flex: 1;
+        justify-content: center;
         overflow: hidden;
+        width: 100%;
     }
     
     .map {
-        width: 100%;
         height: 100%;
+        max-width: 100%;
     }
 }
